--- a/css/styles.css
+++ b/css/styles.css
@@ -824,6 +824,10 @@ h2 {
   opacity: 0;
   transition: height 0.25s, opacity 0.25s;
 }
+.faq-item__content.show-ques {
+  opacity: 1;
+  height: 34px;
+}
 .faq-item__content p {
   padding-top: 13px;
   font-weight: 400;
