--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,9 @@ h2 {
   position: relative;
   display: block;
 }
+.header-menu__button span:hover {
+  color: #8856D9;
+}
 .header-menu__button span::after, .header-menu__button span::before {
   display: block;
   content: "";
@@ -199,7 +202,7 @@ h2 {
   margin-left: -52%;
 }
 .header-menu__list ul.show {
-  transition: opacity 0.2s, transform 0.25s;
+  transition: opacity 0.4s, transform 0.25s;
   opacity: 1;
 }
 .header-menu__list .lang {
@@ -709,7 +712,6 @@ h2 {
   padding: 20px;
 }
 .news-item__info {
-  justify-content: space-between;
   align-items: center;
 }
 .news-item__subtitle {
@@ -724,6 +726,7 @@ h2 {
   font-size: 10px;
   line-height: 17px;
   color: #8C96A0;
+  margin-left: 88%;
 }
 .news-item__title {
   font-weight: 600;
@@ -1147,7 +1150,7 @@ h2 {
 
 @keyframes gravitation {
   0% {
-    transform: translateY(-15px);
+    transform: translateY(-20px);
   }
   100% {
     transform: translateY(0px);
