--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -105,6 +105,10 @@
         position: relative;
         display: block;
 
+        &:hover {
+          color: $violet;
+        }
+
         &::after,
         &::before {
           display: block;
@@ -142,7 +146,7 @@
         margin-left: -52%;
 
         &.show{
-          transition: opacity 0.2s, transform 0.25s;
+          transition: opacity 0.4s, transform 0.25s;
           opacity: 1;
         }
       }
@@ -698,8 +702,7 @@
     border-radius: 6px;
     padding: 20px;
 
-    &__info {
-      justify-content: space-between;
+    &__info { 
       align-items: center;
     }
 
@@ -716,6 +719,7 @@
       font-size: 10px;
       line-height: 17px;
       color: $grey;
+      margin-left: 88%;
     }
 
     &__title {
@@ -769,7 +773,8 @@
 
       &:hover {
         background: $dark;
-      }
+      } 
+
     }
   }
 }
@@ -1198,7 +1203,7 @@
 
 @keyframes gravitation {
   0% {
-    transform: translateY(-15px);
+    transform: translateY(-20px);
   }
 
   100% {
