--- a/css/styles.css
+++ b/css/styles.css
@@ -726,7 +726,7 @@ h2 {
   font-size: 10px;
   line-height: 17px;
   color: #8C96A0;
-  margin-left: 88%;
+  margin-left: 174%;
 }
 .news-item__title {
   font-weight: 600;
@@ -1148,6 +1148,118 @@ h2 {
   z-index: 998;
 }
 
+@media (max-width: 425px) {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 20%;
+  }
+  #titledu {
+    margin-left: 18%;
+  }
+  #titleEd {
+    margin-left: 20%;
+  }
+  #titleVid {
+    margin-left: 40%;
+  }
+  .header {
+    width: 424px;
+  }
+  .header-menu__button {
+    margin-left: 1%;
+    width: 15px;
+    height: 10px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    transition: width 0.25s;
+  }
+  .header-menu__button span {
+    width: 15px;
+  }
+  .header-menu__list ul {
+    display: none;
+  }
+  .header-menu__list ul.show {
+    display: none;
+  }
+  .header-timer {
+    display: none;
+  }
+  .header-timer.flex {
+    display: none;
+  }
+  .description {
+    width: 424px;
+  }
+  .description-title h1 {
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 80px;
+  }
+  .description-subtitle {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    color: #A9C7C7;
+    margin-top: 26px;
+    width: 400px;
+  }
+  .description-button {
+    width: 424px;
+    display: grid;
+    place-items: center;
+  }
+  .editions-list {
+    display: flex;
+    flex-direction: column;
+    width: 424px;
+  }
+  .editions-item {
+    background: linear-gradient(180deg, #141615 0%, #1c2023 100%);
+    border-radius: 6px;
+    padding: 17px;
+    transition: transform 0.25s ease-in-out;
+    transform: translateX(0);
+    height: 300px;
+  }
+  .editions-item__img {
+    display: none !important;
+  }
+  .editions-item__description {
+    align-items: center;
+  }
+  .editions-item__price {
+    text-align: center;
+    margin-top: 15px;
+  }
+  .editions-item__btn {
+    margin: 0 auto;
+  }
+  .dual-description {
+    margin-left: 25%;
+    width: 350px;
+  }
+  .dual-description__info {
+    flex-direction: column;
+  }
+  .dual-description__button {
+    margin-top: 20px;
+  }
+  .dual-img {
+    display: none;
+  }
+  .video {
+    margin-top: 30px;
+  }
+  .video-info {
+    margin-left: 22%;
+  }
+  #video {
+    margin-left: 24%;
+  }
+}
 @keyframes gravitation {
   0% {
     transform: translateY(-20px);
