--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -356,6 +356,16 @@
       width: 100%;
       height: 172px;
       @include bg;
+
+      // &::nth-child(1){
+      //   background: url(/images/card1.png) no-repeat center/cover;
+      // }
+      // &::nth-child(2){
+      //   background: url(/images/bg-card2.png) no-repeat center/cover;
+      // }
+      // &::nth-child(3){
+      //   background: url(/images/card3.png) no-repeat center/cover;
+      // }
     }
 
     &__title {
@@ -702,7 +712,7 @@
     border-radius: 6px;
     padding: 20px;
 
-    &__info { 
+    &__info {
       align-items: center;
     }
 
@@ -719,7 +729,7 @@
       font-size: 10px;
       line-height: 17px;
       color: $grey;
-      margin-left: 88%;
+      margin-left:174%;
     }
 
     &__title {
@@ -1198,6 +1208,142 @@
     visibility: visible;
     opacity: 1;
     z-index: 998;
+  }
+}
+
+
+@media (max-width:425px) {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 20%;
+}
+  #titledu{
+    margin-left: 18%;
+}
+  #titleEd{
+    margin-left: 20%;
+  }
+  #titleVid{
+    margin-left: 40%;
+  }
+  .header{
+    width: 424px;
+    &-menu{
+      &__button {
+        margin-left: 1%;
+      width: 15px;
+      height: 10px;
+      cursor: pointer;
+      position: relative;
+      z-index: 1;
+      transition: width 0.25s;
+      span {
+        width: 15px;
+      }
+      }
+      &__list{
+
+        ul{
+          display: none;
+
+          &.show{
+            display: none;
+          }
+        }
+
+      }
+      
+    }
+    &-timer{
+      display: none;
+
+      &.flex{
+        display: none;
+      }
+    }
+  }
+  .description{
+    width: 424px;
+    &-title {
+      h1 {
+        font-weight: 400;
+        font-size: 80px;
+        line-height: 80px;
+      }
+    }
+    &-subtitle {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 20px;
+      color: $sea;
+      margin-top: 26px;
+      width: 400px;
+    }
+    &-button {
+      width: 424px;
+      display: grid;
+      place-items: center;
+    }
+  }
+  .editions{
+    &-list {
+      display: flex;
+      flex-direction: column;
+      width: 424px;
+    }
+    &-item {
+      background: linear-gradient(180deg, #141615 0%, #1c2023 100%);
+      border-radius: 6px;
+      padding: 17px;
+      transition: transform 0.25s ease-in-out;
+      transform: translateX(0);
+      height: 300px;
+  
+      &__img {
+        display: none!important;
+      }
+  
+  
+      &__description {
+        align-items: center;
+      }
+  
+      &__price {
+        text-align: center;
+        margin-top: 15px;
+      }
+  
+      &__btn {
+        margin: 0 auto;
+      }
+    }
+  }
+  .dual{
+    &-description{
+      margin-left: 25%;
+      width: 350px;
+      &__info {
+        flex-direction: column;
+      }
+      &__button {
+        margin-top: 20px;
+      }
+    }
+    &-img{
+      display: none;
+    }
+  }
+  .video{
+    margin-top: 30px;
+
+    &-info{
+      margin-left: 22%;
+    }
+
+  }
+  #video{
+    margin-left: 24%;
   }
 }
 
