--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -327,6 +327,7 @@
 }
 
 .editions {
+  margin-top: 2%;
   &-list {
     margin-top: 32px;
     display: grid;
@@ -729,7 +730,7 @@
       font-size: 10px;
       line-height: 17px;
       color: $grey;
-      margin-left:174%;
+      margin-left: 87%;
     }
 
     &__title {
@@ -1213,6 +1214,20 @@
 
 
 @media (max-width:425px) {
+  .section{
+    &-editions{
+      margin-bottom: 1%;
+    }
+    &-main{
+      &::before{
+        display: none;
+      }
+      &::after{
+        left: 2%;
+        width: 424px;
+      }
+    }
+  }
   .container {
     width: 100%;
     margin: 0 auto;
@@ -1226,6 +1241,18 @@
   }
   #titleVid{
     margin-left: 40%;
+  }
+  #explTitle{
+    margin-left: 28%;
+  }
+  #exph3Title{
+    margin-left: 31%;
+  }
+  #exph31Title{
+    margin-left: 40%;
+  }
+  #newsTitle{
+    margin-left: 45%;
   }
   .header{
     width: 424px;
@@ -1286,7 +1313,18 @@
       place-items: center;
     }
   }
+  .explore-info.reverse .explore-button{
+    margin-left: 43%;
+  }
+  .explore-info.reverse .explore-description {
+    text-align: center;
+    margin-left: 11%;
+}
   .editions{
+    margin-top: -50%;
+    &-description{
+      margin-left: 1%;
+    }
     &-list {
       display: flex;
       flex-direction: column;
@@ -1344,6 +1382,36 @@
   }
   #video{
     margin-left: 24%;
+  }
+  .explore{
+    &-switch{
+      margin-left: 30%;
+    }
+    &-img{
+      display: none;
+    }
+    &-list.active{
+      margin-top: -16%;
+      margin-left: 21%;
+    }
+    &-button{
+      margin-left: 46%;
+    }
+  }
+  .news{
+    .swiper{
+      &-wrapper{
+display: flex;
+      }
+    }
+    &-item{
+      &__date{
+        margin-left: 1%;
+      }
+      &__img{
+        display: none;
+      }
+    }
   }
 }
 
