--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,10 +4,6 @@
 //   transition: opacity 0.2s, transform 0.25s;
 //   opacity: 1;
 // }
-.ul-hidden{
-
-}
-
 .mobile-burger-menu{
   width: 127vw;
   height: 122vh;
@@ -26,7 +22,7 @@
   }
 
 &.ul-hidden{
-    transform: translate(-540px,100px);
+    transform: translate(-5400px,100px);
     transition-property: transform;
     transition-duration: .6s;
     transition-timing-function: ease;
@@ -111,7 +107,7 @@
     &.open1 {
       display: flex;
       row-gap: 6px;
-      top: 54%;
+      top: 79%;
       flex-direction: column;  
       z-index: 1000;
     }
@@ -1427,11 +1423,26 @@
     margin-left: -5%;
   }
   .mobile-burger-menu{
+    &.ul-hidden{
+      transform: translate(-540px,100px);
+      transition-property: transform;
+      transition-duration: .6s;
+      transition-timing-function: ease;
+      padding-top: 29px;
+  }
+  
+  &.show-menu{
+    // display: block;
+    transform: translateX(0px);
+    transition-property: transform;
+    transition-duration: 0.6s;
+    transition-timing-function: ease;
+    transition-delay: 0.3s;
+    height: 120vh;
+    z-index: 1000;
+    padding-left: 45px; 
+  }
     &.show-menu{
-      // transform: translateX(0px);
-      // position:fixed;
-      // width: 100vw;
-      // height: 100vh;
       z-index: 1000;
       padding-left: 45px; 
   }
