--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1675,6 +1675,42 @@
       justify-content: center;
     }
   }
+  #card{
+    width: 67%;
+  }
+  #expire{
+    margin-left: 1%;
+    width: 69%;
+  }
+  #ccv{
+    width: 54%;
+    margin-left: -23%;
+  }
+  #instant{
+    width: 68%;
+  }
+  .form{
+    &-group{
+      &.c{
+        label{
+          margin-left: -22%;
+        }
+      }
+    }
+  }
+  .modal{
+    width: 80%;
+
+    &-description{
+      width: 69%;
+    }
+    &-total{
+      width: 69%;
+    }
+    &-submit{
+      width: 70%;
+    }
+  }
 }
 
 @keyframes gravitation {
